k8s/orders/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: ecommerce
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
