k8s/orders/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: orders
  namespace: ecommerce
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`localhost`) && PathPrefix(`/orders`)
      middlewares:
        - name: strip-api-prefixes
      services:
        - kind: Service
          name: orders
          port: 3001
          scheme: http
